[refactor] add makefile, logout, utils jwt
